MDL-74132 reportbuilder: Fix horizontal scrolling regression in editor
MDL-73902 caused a regression in reportbuilder editor horizontal scrolling because of the 'no-overflow' class removal
in the table container wrapper. This patch add styles to allow horizontal scroll in reportbuilder editor table.

--- a/theme/classic/style/moodle.css
+++ b/theme/classic/style/moodle.css
@@ -21074,6 +21074,9 @@ div.editor_atto_toolbar button .icon {
 .reportbuilder-report-container {
   min-width: 0; }
 
+.reportbuilder-editor-table-container {
+  overflow-x: auto; }
+
 /* Custom table headers */
 .reportbuilder-table th button[data-action="report-remove-column"] .icon,
 .reportbuilder-table th span[data-drag-type="move"] .icon {
